Reverted configurations to something stable for website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             padding: 0px;
             }   
             canvas{
-                margin: 20px;               
+                margin: 20px;     
+                border: 2px solid #CCCCCC;          
             }
             div{
                 display: inline-block;
