--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             html, body{
             margin: 10px;
             padding: 0px;
+                bg-color: "black";
             }   
             canvas{
                 margin: 20px;     
@@ -16,6 +17,7 @@
             div{
                 display: inline-block;
                 font-size: 24pt;
+                color: "white";
                 font-family: 'Courier New', Courier, monospace;
                 font-weight: 800;
 
