--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             html, body{
             margin: 10px;
             padding: 0px;
-                bg-color: "black";
+                background-color: "black";
             }   
             canvas{
                 margin: 20px;     
@@ -17,7 +17,7 @@
             div{
                 display: inline-block;
                 font-size: 24pt;
-                color: "white";
+                color: "#FFFFFF";
                 font-family: 'Courier New', Courier, monospace;
                 font-weight: 800;
 
