--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             html, body{
             margin: 10px;
             padding: 0px;
-            background-color: "black";
+            background-color: #000000;
             }   
             canvas{
                 margin: 20px;     
@@ -17,8 +17,8 @@
             div{
                 display: inline-block;
                 font-size: 24pt;
-                color: "#FFFFFF";
-                background-color: "#000000";
+                color: #FFFFFF;
+                background-color: #000000;
                 font-family: 'Courier New', Courier, monospace;
                 font-weight: 800;
 
